--- a/style.css
+++ b/style.css
@@ -1,170 +1,187 @@
+/* Definición de variables de colores */
 
-body{
+:root {
+    /* Blanco (F6F6F6) */
+    --color-blanco: #F6F6F6;
+    /* Rosa pastel (FA8AE0) */
+    --color-rosa-pastel: #FA8AE0;
+    /* Rosa pastel (F995E1) */
+    --color-rosa-pastel: #F995E1;
+    /* Rosa pastel (910C6F) */
+    --color-rosa-pastel: #910C6F;
+    /* Rosa pastel (910C6F) */
+    --color-rosa-pastel: #2B051C;
+    /* Rosa pastel (910C6F) */
+    --color-rosa-pastel: #F157A4;
+}
+
+body {
     background-image: url('./img/fondo1.jpg');
+
 }
 
-img{
-    border-radius: 30px;
-    margin-top: 15px;
-    margin-left: 20px;
-    box-shadow:2px 2px 5px rgb(238, 54, 146);
-   
+/* HEADER */
+
+header {
+    padding: 20px 20px 0 20px;
 }
 
-nav{
-    font-family: 'Xanh Mono', monospace;
-    position: absolute;
-    z-index: 30;
+.container__header {
+    position: relative;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
-/* iconos */
-.fas{
-    display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
-    font-size: inherit;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+img {
+    border-radius: 15px;
+    width: 220px;
+    height: 220px;
+    box-shadow: 2px 2px 5px #FA8AE0;
+}
+
+nav {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1000;
+    height: 50px;
+    border-radius: 5px;
+    background-color: #F995E1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav__toggle {
+    color: #910C6F;
+    background: none;
+    border: none;
     font-size: 30px;
-    color: #910c6f;
-    padding-left: 60%;
+    padding: 0 20px;
+    line-height: 60px;
+    display: none;
+    cursor: pointer;
 }
 
-/* correo */
-
-#box{
-    text-align: center;
-    
+nav li {
+    display: inline;
+    margin: 0 20px;
 }
 
-#form{
+nav a {
     font-family: 'Xanh Mono', monospace;
-    font-weight: bolder;
-    margin-top: 30%;
-    margin-bottom: 30%;
-    font-size: 150%;
-    color: rgb(129, 3, 56);
-    background-position: center;
-    text-align: center;
-   
+    font-size: 20px;
+    font-weight: bold;
+    color: #F6F6F6;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
-/* caja email */
+nav a:hover {
+    color: #910C6F;
+    font-size: 25px;
+    text-decoration: underline;
+    transition: font-size 0.9s ease;
+}
 
-#email{
-    
-    border-radius: 10px;
-    width: 500px;
-    height: 40px;
-    margin: 10px 0 10px 0;
-    border: 2px solid rgb(160, 49, 127);
-    text-align: center;
+/* Estilos para dispositivos con un ancho máximo de 767px (celulares) */
+@media only screen and (max-width: 480px){
+    .container__header {
+        padding: 10px;
+    }
+
+    .nav__toggle {
+        display: block;
+    }
+
+    .nav-menu {
+        display: none;
+        position: absolute;
+        top: 50px;
+        right: 20px;
+        background-color: #F995E1;
+        border-radius: 5px;
+        padding: 10px;
+    }
+
+    .nav-menu li {
+        margin: 10px 0;
+    }
+
+    .nav-menu a {
+        font-size: 18px;
+    }
+
+    .nav-menu.visible {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+/* Estilos para dispositivos con un ancho mínimo de 768px y un máximo de 1023px (tabletas) */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    nav {
+        position: fixed;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #F995E1;
+    }
+}
+
+/* Estilos para dispositivos con un ancho mínimo de 1024px (computadoras portátiles) */
+@media only screen and (min-width: 769px) and (max-width: 1023px) {
 
 }
 
-/* boton enviar */
-#submit{
-    border: 2px solid rgb(160, 49, 127);
-    border-radius: 10px;
-    
-}
-
-/* video */
-
-#video{
-    width: 80%;
-    height: 80%;
-    border: 2px solid rgb(160, 49, 127);
+/* Estilos para dispositivos con un ancho mínimo de 1024px (computadoras de escritorio) */
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
 
 }
 
-h3{
+/* SERVICIOS */
+
+.container__servicios {
+    display: flex;
+    flex-direction: column; 
+    gap: 20px; /* Espacio entre cada elemento */
+    width: 940px;
+    margin: 0 auto;
+    padding-top: 200px;
+}
+
+.servicios {
+    display: flex;
+}
+
+.icon-group {
+    margin-right: 20px; /* Espacio entre el icono y el texto */
+    font-size: 30px;
+    color: #910C6F;
+}
+
+.informacion h3{
     font-family:'Xanh Mono', monospace;
     font-weight: 700;  
-    box-shadow:2px 2px 5px rgb(241, 87, 164);
-    color: rgb(43, 5, 28);
-
+    font-size: 30px;
+    box-shadow:2px 2px 5px #F157A4;
+    color: #2B051C;
+    margin-bottom: 15px;
+    justify-content: center;
+    align-items: center;
 }
-p{
+
+.informacion p{
     font-family:'Xanh Mono', monospace;
     font-weight: 600;  
     font-size: 20px;
+    margin-bottom: 20px;
+    color: #2B051C;
+    line-height: 1.2;
 }
 
-#nav-bar{
-    position: fixed;
-    font-weight: 700;
-}
 
-@media(max-width: 500px){
-
-    .boton{
-        background-color: aqua;
-    }
-}
-#galeria .col.lg-4{
-    margin: 0 !important;
-    padding: 25px;
-}
-#galeria img{
-    width: 90%;
-    height: 90%;
-}
-/* texto galeria */
-h1{
-    font-family:'Xanh Mono', monospace;
-    text-align: center;
-    color: rgb(112, 3, 89);
-    box-shadow:2px 2px 5px rgb(241, 87, 164);
-}
-/* imagenes mandala */
-
-.img-galeri{
-    background-image: url('./img/man2.jpg');
-    padding: 1% 1% 1% 1%;
-    background-size: 95%;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-bottom: 5%;
-   
-}
-.img-show{
-    transform: scale(0.8);
-   
-}
-
-/* footer */
-#galeria{
-    width: 90%;
-    height: 90%;
-    margin-left: 50px;
-}
-
-/* footer */
-#footer{
-    background-color: rgb(238, 143, 209);
-    padding-top: 20px;
-    font-family:'Xanh Mono', monospace;
-    font-weight: 700;
-    font-size: 30px;
-    margin-left: 90px;
-    margin-right: 90px;
-    border-radius: 30px;
-    margin-top: 20px;
-    padding-bottom: 20px;
-
-}
-
-#img-footer{
-    width: 90%;
-    height: 90%;
-   
-}
-h5{
-    color:black;
-    margin-top: 30%;
-}
-h6{
-    color:black;
-    margin-top: 30%;
-}
