--- a/style.css
+++ b/style.css
@@ -302,14 +302,14 @@ nav {
 
 /* CAJA EMAIL */
 
-.form__container #email {
+.form__container .email {
     font-family: 'Xanh Mono', monospace;
     font-size: 20px;
     border-radius: 10px;
     border: 2px solid #910C6F;
     width: 500px;
     height: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
@@ -332,6 +332,12 @@ nav {
     background-color: #910C6F;
 }
 
+/* .button__sendEmail:disabled {
+    background: #ccc;
+    cursor: not-allowed;
+} */
+
+
 
 
 
@@ -351,7 +357,8 @@ nav {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto; /* Se activará el scroll si es necesario */
+    overflow: auto;
+    /* Se activará el scroll si es necesario */
     background-color: rgba(249, 149, 225, 0.3);
 }
 
@@ -374,7 +381,7 @@ nav {
     padding: 20px;
     width: 700px;
     height: 380px;
-    background-image: url('./img/seis.jpg');
+    background-image: url('./img/backgroundModal.jpg');
     border: 2px solid #910C6F;
     box-shadow: 0 0 10px;
     border-radius: 20px;
