--- a/css/nav-desc-email-video-styles.css
+++ b/css/nav-desc-email-video-styles.css
@@ -39,7 +39,7 @@ header {
     align-items: center;
 }
 
-img {
+.container__header img {
     border-radius: 15px;
     width: 220px;
     height: 220px;
