--- a/css/galeria-style.css
+++ b/css/galeria-style.css
@@ -3,28 +3,16 @@
 :root {
     /* Blanco */
     --color-blanco: #F6F6F6;
-    /* Rosa pastel */
-    --color-rosa-pastel: #FA8AE0;
-    /* Rosa pálido */
-    --color-rosa-palido: #F995E1;
-    /* Gris claro */
-    --color-gris-claro: #CCC;
     /* Rosa intenso */
     --color-rosa-intenso: #F157A4;
     /* Púrpura claro */
-    --color-purpura-claro: #910C6F;
-    /* Púrpura oscuro */
-    --color-purpura-oscuro: #2B051C;
-    /* Púrpura profundo */
-    --color-purpura-profundo: #810338;
-    /* Rojo */
-    --color-rojo: #FF0000;
+    --color-magenta-profundo: #700359;
 }
 
 .main_container {
     display: flex;
     flex-direction: column;
-    margin-top: 300px; 
+    margin-top: 300px;
     margin-bottom: 300px;
 }
 
@@ -34,7 +22,7 @@
     font-weight: bold;
     height: 50px;
     box-shadow: 2px 2px 5px var(--color-rosa-intenso);
-    color: rgb(112, 3, 89);
+    color: var(--color-magenta-profundo);
     margin-bottom: 70px;
     text-align: center;
     justify-content: center;
@@ -45,14 +33,16 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    gap: 20px; /* Espacio entre la galería y el formulario */
+    gap: 20px;
+    /* Espacio entre la galería y el formulario */
 }
 
 .mis_productos {
-    width: 50%; /* Ajuste de ancho para mejor distribución */
+    width: 50%;
+    /* Ajuste de ancho para mejor distribución */
     padding: 20px;
     border-radius: 15px;
-    box-shadow: 2px 4px 8px var(--color-rosa-intenso); 
+    box-shadow: 2px 4px 8px var(--color-rosa-intenso);
     background-color: rgba(255, 255, 255, 0.4);
 }
 
@@ -60,7 +50,7 @@
     font-family: 'Xanh Mono', monospace;
     font-size: 30px;
     font-weight: bold;
-    color: rgb(112, 3, 89);
+    color: var(--color-magenta-profundo);
     margin-bottom: 50px;
     text-align: center;
     justify-content: center;
@@ -72,19 +62,42 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
-    /* background-color: #2B051C; */
     overflow: auto;
     max-height: 760px;
 }
 
+
+/* Estilos específicos para la barra de desplazamiento dentro de .galeria__container */
+.galeria__container::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+.galeria__container::-webkit-scrollbar-track {
+    background:var(--color-blanco);
+    border-radius: 10px;
+}
+
+.galeria__container::-webkit-scrollbar-thumb {
+    background: var(--color-magenta-profundo);
+    border-radius: 10px;
+    border: 2px solid var(--color-blanco);
+}
+
+.galeria__container::-webkit-scrollbar-thumb:hover {
+    background: var(--color-rosa-intenso);
+}
+
 .card {
-    /* background-color: #9c6586; */
-    background-image: url('../img/fondo.jpg');
+    background-color: rgba(145, 12, 111, 0.5);
     border-radius: 15px;
-    width: 250px; /* Ancho aumentado */
-    height: 350px; /* Altura aumentada */
-    margin: 10px; /* Espaciado entre tarjetas */
-    box-shadow: 2px 4px 8px var(--color-rosa-intenso); 
+    width: 250px;
+    /* Ancho aumentado */
+    height: 350px;
+    /* Altura aumentada */
+    margin: 10px;
+    /* Espaciado entre tarjetas */
+    box-shadow: -2px -4px 8px var(--color-rosa-intenso);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -94,7 +107,8 @@
 .img_container {
     width: 80%;
     height: auto;
-    overflow: hidden; /* Para asegurarse de que la imagen se recorte si es necesario */
+    overflow: hidden;
+    /* Para asegurarse de que la imagen se recorte si es necesario */
     border-radius: 15px;
     margin-bottom: 10px;
     display: flex;
@@ -105,29 +119,27 @@
 .img_container img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Recorte de imagen si es necesario para llenar el contenedor */
+    object-fit: cover;
+    /* Recorte de imagen si es necesario para llenar el contenedor */
 }
 
 .card_container_info {
-    /* width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: #F995E1;
-    text-align: start;
-    margin-left: 20px; 
-    border-radius: 10px;  */
-    width: calc(100% - 40px); /* Ajuste para compensar el padding */
+    width: calc(100% - 40px);
+    /* Ajuste para compensar el padding */
     display: flex;
     color: var(--color-blanco);
     flex-direction: column;
     align-items: flex-start;
     background-color: var(--color-rosa-palido);
     text-align: start;
-    padding-left: 20px; /* Añade espacio interno a la izquierda */
-    padding-right: 20px; /* Añade espacio interno a la derecha */
-    border-radius: 10px; /* Bordes redondeados */
-    box-sizing: border-box; /* Incluye padding y borde en el tamaño total */
+    padding-left: 20px;
+    /* Añade espacio interno a la izquierda */
+    padding-right: 20px;
+    /* Añade espacio interno a la derecha */
+    border-radius: 10px;
+    /* Bordes redondeados */
+    box-sizing: border-box;
+    /* Incluye padding y borde en el tamaño total */
 }
 
 .card_container_info p {
@@ -140,69 +152,18 @@
 .card_container_value {
     display: flex;
     justify-content: space-between;
-    
     width: 100%;
+    flex-direction: row;
+    align-items: center;
 }
 
 .boton_eliminar img {
     width: 40px;
     height: 40px;
     cursor: pointer;
+    transition: all 500ms;
 }
 
-.agregar_producto {
-    width: 35%; /* Ajuste de ancho para mejor distribución */
-    /* background-color: blueviolet; */
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-image: url('../img/fondo.jpg'); */
-    box-shadow: 2px 4px 8px var(--color-rosa-intenso); 
-    background-color: rgba(255, 255, 255, 0.4);
-}
-
-.agregar_producto h1 {
-    font-family: 'Xanh Mono', monospace;
-    font-size: 30px;
-    font-weight: bold;
-    color: white;
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.form_container_galeria {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-}
-
-.form_container_galeria input {
-    padding: 10px;
-    border: 2px solid #fff;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.button_container_galeria {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-
-.button_submit {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: rgb(112, 3, 89);
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.button_submit:hover {
-    background-color: rgb(140, 3, 112);
+.boton_eliminar img:hover {
+    transform: scale(1.30);
 }
