--- a/css/galeria-style.css
+++ b/css/galeria-style.css
@@ -102,10 +102,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden; /* Asegura que el contenido no se desborde */
+    text-align: center; /* Centra el contenido */
 }
 
 .img_container {
-    width: 80%;
+    width: 90%;
     height: auto;
     overflow: hidden;
     /* Para asegurarse de que la imagen se recorte si es necesario */
@@ -118,13 +120,13 @@
 
 .img_container img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     /* Recorte de imagen si es necesario para llenar el contenedor */
 }
 
 .card_container_info {
-    width: calc(100% - 40px);
+    width: calc(100% - 30px);
     /* Ajuste para compensar el padding */
     display: flex;
     color: var(--color-blanco);
